--- a/css/style.css
+++ b/css/style.css
@@ -165,9 +165,11 @@ header {
     border-top: 5px solid black;
     border-bottom: 5px solid black;
     background-color: #F1E7FD;
+    height: 280px;
     display:flex;
     flex-direction: row;
     justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
 
@@ -192,10 +194,12 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
+    
 }
 .neonMrd {
     padding-left: 30px;
     padding-right: 50px;
+    cursor: pointer;
 }
 .mrdSummery {
     width: 800px;
@@ -209,10 +213,12 @@ header {
     margin-bottom: 50px;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 .sageScreen {
     padding-left: 30px;
     padding-right: 50px;
+    cursor: pointer;
 }
 .sageSummery {
     width: 800px;
@@ -227,10 +233,12 @@ header {
     margin-bottom: 50px;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 .untetheredScreen {
     padding-left: 30px;
     padding-right: 50px;
+    cursor: pointer;
 }
 .untetheredSummery {
     width: 800px;
